# outdoor_gcs

./: CMakeLists.txt  README.md  mainpage.dox  package.xml
include/outdoor_gcs/: main_window.hpp  math_utils.h  qnode.hpp
src/: main.cpp  main_window.cpp  msg_bits.cpp  qnode.cpp
ui/: main_window.ui
